--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="DroneList" Height="450" Width="800" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick" Activated="Window_Activated">
+        Title="DroneList" Height="450" Width="800" Activated="Window_Activated">
     <Grid Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="697*"/>
@@ -34,8 +34,8 @@
             </Grid.ColumnDefinitions >
             <ComboBox x:Name="StatusSelector" Grid.Column="1" Width="120" SelectionChanged="StatusSelector_SelectionChanged" Margin="40,0,40,0"/>
             <ComboBox x:Name="WeightSelector" Grid.Column="3" Margin="40,0,40,0" Width="120" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" SelectionChanged="WeightSelector_SelectionChanged"/>
-            <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Background="#FFDC2711"/>
-            <Label Content="Drone Weight" Grid.Column="2" HorizontalAlignment="Center" Margin="0,6,0,0" VerticalAlignment="Top" Background="#FFDC2711"/>
+            <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal"/>
+            <Label Content="Drone Weight" Grid.Column="2" HorizontalAlignment="Center" Margin="0,6,0,0" VerticalAlignment="Top" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal"/>
         </Grid>
         <DataGrid x:Name="droneToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="70,45,147,45" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Row="1" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick" Background="#FFFAFAFA" OpacityMask="Black">
             <DataGrid.Columns>
@@ -51,13 +51,8 @@
 
             </DataGrid.Columns>
         </DataGrid>
-
-
-
-
-
-        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="660,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3"/>
-        <Button x:Name="closeButton" Content="Close" HorizontalAlignment="Left" Margin="660,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3">
+        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="660,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click" Height="39" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3"/>
+        <Button x:Name="closeButton" Content="Close" HorizontalAlignment="Left" Margin="660,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Height="39" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3">
            
         </Button>
     </Grid>
