--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -13,6 +13,7 @@
             <ColumnDefinition Width="33*"/>
             <ColumnDefinition Width="20*"/>
         </Grid.ColumnDefinitions>
+        
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FFF9FAF9"/>
@@ -53,7 +54,8 @@
         </DataGrid>
         <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="660,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click" Height="39" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3"/>
         <Button x:Name="closeButton" Content="Close" HorizontalAlignment="Left" Margin="660,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Height="39" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3">
-           
+
         </Button>
+        <Button Content="Group List" HorizontalAlignment="Left" Margin="660,0,0,0" Grid.Row="1" VerticalAlignment="Center" Height="46" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3" Click="Button_Click_1"/>
     </Grid>
 </Window>
