--- a/PL/CustomerListWindow.xaml
+++ b/PL/CustomerListWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="CustomerListWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="customerToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="0,113,3.6,107" RowDetailsVisibilityMode="VisibleWhenSelected">
+        <DataGrid x:Name="customerToListDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="0,113,3.6,107" RowDetailsVisibilityMode="VisibleWhenSelected">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="nameColumn" Binding="{Binding Name}" Header="Name" Width="SizeToHeader"/>
@@ -18,5 +18,6 @@
                 <DataGridTextColumn x:Name="phoneColumn" Binding="{Binding Phone}" Header="Phone" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="400,355,0,0" VerticalAlignment="Top" Height="43" Width="116"/>
     </Grid>
 </Window>
