--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -16,8 +16,9 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button Content="Drones" HorizontalAlignment="Left" Margin="39,289,0,0" VerticalAlignment="Top" Click="Button_Click" Height="72" Width="205" Background="#FFDC2711" FontSize="24" FontFamily="Arial Black" FontWeight="Bold"/>
-        <Button Content="Customers" HorizontalAlignment="Left" Margin="278,289,0,0" VerticalAlignment="Top" Height="56" Width="134" Click="Button_Click_1"/>
+        <Button x:Name="DronesWindow" Content="Drones" HorizontalAlignment="Left" Margin="39,289,0,0" VerticalAlignment="Top"  Height="72" Width="205" Background="#FFDC2711" FontSize="24" FontFamily="Arial Black" FontWeight="Bold" Click="DronesWindow_Click"/>
+        <Button x:Name="CustomersWindow" Content="Customers" HorizontalAlignment="Left" Margin="278,289,0,0" VerticalAlignment="Top" Height="56" Width="134" Click="CustomersWindow_Click" />
+        <Button x:Name="StationsWindow" Content="Stations" HorizontalAlignment="Left" Margin="464,289,0,0" VerticalAlignment="Top" Height="56" Width="109" Click="StationsWindow_Click"/>
         <Grid Margin="181,36,180,181">
             <Grid.Background>
                 <ImageBrush ImageSource="/dronetolist.jpg"/>
