--- a/PL/StationListWindow.xaml
+++ b/PL/StationListWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="StationListWindow" Height="450" Width="800">
+        Title="StationListWindow" Height="450" Width="800" Activated="Window_Activated">
     <Grid>
-        <DataGrid x:Name="stationToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="88,81,257,139" RowDetailsVisibilityMode="VisibleWhenSelected">
+        <DataGrid x:Name="stationToListDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="88,81,257,139" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="stationToListDataGrid_MouseDoubleClick">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="availableCharginggSlotsNumberColumn" Binding="{Binding AvailableCharginggSlotsNumber}" Header="Available Chargingg Slots Number" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
@@ -15,5 +15,7 @@
                 <DataGridTextColumn x:Name="rservedCharginggSlotsNumberColumn" Binding="{Binding RservedCharginggSlotsNumber}" Header="Rserved Chargingg Slots Number" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button  Content="Button" HorizontalAlignment="Left" Margin="630,81,0,0" VerticalAlignment="Top" Height="36" Width="101" Click="OptionButtun_Click"/>
+        <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="630,143,0,0" VerticalAlignment="Top" Height="45" Width="101" Click="closeButtun_Click"/>
     </Grid>
 </Window>
